apps/django-test-79/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-test-79
  labels:
    name: django-test-79
    managed-by: dev-portal
