apps/django-test-79/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-test-79-service
  namespace: django-test-79
  labels:
    app: django-test-79
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-test-79
